@startuml compositeMONE
!theme plain
skinparam linetype ortho

class VehicleFactory {
  + createVehicle(type: string, name: string, fuelType?: FuelType, consumption: number, favorite?: boolean): Vehicle
}

interface Vehicle <<interface>> {
  + name: string
  + type: string
  + fuelType: FuelType | null
  + consumption: Consumption
  + mostrarInfo(): void
}

class Bike {
  + consumption: Consumption (kcal/min)
}

class Walking {
  + consumption: Consumption (kcal/min)
}

class ElectricCar {
  + consumption: Consumption (kWh/100km)
}

class FuelCar {
  + consumption: Consumption (L/100km)
}

enum FuelType {
  gasoline
  diesel
  electric
}

VehicleFactory --> Vehicle : crea instancias concretas
Vehicle <|.. Bike
Vehicle <|.. Walking
Vehicle <|.. ElectricCar
Vehicle <|.. FuelCar

note bottom of VehicleFactory
  El repositorio no implementa un árbol Composite;
  la jerarquía de movilidad se modela con un Factory Method
  que devuelve clases concretas de Vehicle.
  (src/domain/model/VehicleFactory.ts)
end note

@enduml

